--- a/site/ivasmm-examples.Rmd
+++ b/site/ivasmm-examples.Rmd
@@ -7,12 +7,12 @@ pagetitle: ivasmm-examples
 library(Statamarkdown)
 ```
 
-```{stata, collectcode=TRUE, include=FALSE}
+```{stata, include=FALSE, collectcode=TRUE}
 adopath ++ ..
 ```
 
 Read in binary outcome data; `y` outcome, `x` exposure, `w` covariate, `z*` instrumental variables (genotypes).
-```{stata, collectcode=TRUE, results=FALSE}
+```{stata, collectcode=TRUE, results='hide'}
 use ../data/ivbinoutdata, clear
 ```
 
