--- a/site/ivxtile-examples.Rmd
+++ b/site/ivxtile-examples.Rmd
@@ -7,7 +7,7 @@ pagetitle: ivxtile-examples
 library(Statamarkdown)
 ```
 
-```{stata, collectcode=TRUE, include=FALSE}
+```{stata, include=FALSE, collectcode=TRUE}
 adopath ++ ..
 ```
 
@@ -17,24 +17,51 @@ use ../data/ivmwdata, clear
 ```
 
 Plot outcome-exposure relationships
-```{stata}
+```{stata, eval=FALSE}
 twoway line y1 x, sort(x)
+```
+```{r, echo=FALSE, fig.align='center'}
+knitr::include_graphics("./img/ivmw-plot-01.svg")
+```
+```{stata, eval=FALSE}
 twoway line y2 y3 y4 x, sort(x)
+```
+```{r, echo=FALSE, fig.align='center'}
+knitr::include_graphics("./img/ivmw-plot-02.svg")
+```
+```{stata, eval=FALSE}
 twoway line y5 x, sort(x)
+```
+```{r, echo=FALSE, fig.align='center'}
+knitr::include_graphics("./img/ivmw-plot-03.svg")
 ```
 
 Use with different iv commands.
 ```{stata}
 ivxtile, nq(5) par(x): ivregress 2sls y2 (x = g)
-ivxtile, nq(10) par(b1): ivtsps y2 (x = g)
+qui gr export ./img/ivxtile-plot-01.svg, replace
 ```
-    
+```{r, echo=FALSE, fig.align='center'}
+knitr::include_graphics("./img/ivxtile-plot-01.svg")
+```
+```{stata}
+ivxtile, nq(10) par(b1): ivtsps y2 (x = g)
+qui gr export ./img/ivxtile-plot-02.svg, replace
+```
+```{r, echo=FALSE, fig.align='center'}
+knitr::include_graphics("./img/ivxtile-plot-02.svg")
+```    
+
 Some binary outcome examples.
-```{stata, collectcode=TRUE, results=FALSE}
+```{stata, collectcode=TRUE, results='hide'}
 use ../data/ivbinoutdata, clear
 ```
 ```{stata}
 ivxtile, nq(5) par(b1): ivtsps y (x = z1 z2 z3), link(logadd)
+qui gr export ./img/ivxtile-plot-03.svg, replace
+```
+```{r, echo=FALSE, fig.align='center'}
+knitr::include_graphics("./img/ivxtile-plot-03.svg")
 ```
 ```{stata, eval=FALSE}
 ivxtile, nq(5) par(b1): ivtsps y (x = z1 z2 z3), link(logmult)
