--- a/site/ivmw-examples.Rmd
+++ b/site/ivmw-examples.Rmd
@@ -105,3 +105,7 @@ ivmw, window(3950) par(b1): ivtsri y (x = z1 z2 z3), link(logadd)
 ivmw, window(3950) par(b1): ivtsri y (x = z1 z2 z3), link(logmult)
 ivmw, window(3950) par(b1): ivtsri y (x = z1 z2 z3), link(logit)
 ```
+
+```{r, include=FALSE}
+detach(package:Statamarkdown)
+```
