--- a/site/ivtsri-examples.Rmd
+++ b/site/ivtsri-examples.Rmd
@@ -51,3 +51,7 @@ Bootstrap standard errors.
 ```{stata}
 bootstrap, reps(250): ivtsri y (x = z1 z2 z3), estonly
 ```
+
+```{r, include=FALSE}
+detach(package:Statamarkdown)
+```
