--- a/site/ivxtile-examples.Rmd
+++ b/site/ivxtile-examples.Rmd
@@ -20,19 +20,19 @@ Plot outcome-exposure relationships
 ```{stata, eval=FALSE}
 twoway line y1 x, sort(x)
 ```
-```{r, echo=FALSE, fig.align='center'}
+```{r, echo=FALSE, fig.align='center', fig.alt="Plot of relationship between y1 and x."}
 knitr::include_graphics("./img/ivmw-plot-01.svg")
 ```
 ```{stata, eval=FALSE}
 twoway line y2 y3 y4 x, sort(x)
 ```
-```{r, echo=FALSE, fig.align='center'}
+```{r, echo=FALSE, fig.align='center', fig.alt="Plot of relationships between y2, y3, y4, and x."}
 knitr::include_graphics("./img/ivmw-plot-02.svg")
 ```
 ```{stata, eval=FALSE}
 twoway line y5 x, sort(x)
 ```
-```{r, echo=FALSE, fig.align='center'}
+```{r, echo=FALSE, fig.align='center', fig.alt="Plot of relationship between y5 and x."}
 knitr::include_graphics("./img/ivmw-plot-03.svg")
 ```
 
@@ -41,14 +41,14 @@ Use with different iv commands.
 ivxtile, nq(5) par(x): ivregress 2sls y2 (x = g)
 qui gr export ./img/ivxtile-plot-01.svg, replace
 ```
-```{r, echo=FALSE, fig.align='center'}
+```{r, echo=FALSE, fig.align='center', fig.alt="Plot of estimated causal effect versus median of exposure in quantile."}
 knitr::include_graphics("./img/ivxtile-plot-01.svg")
 ```
 ```{stata}
 ivxtile, nq(10) par(b1): ivtsps y2 (x = g)
 qui gr export ./img/ivxtile-plot-02.svg, replace
 ```
-```{r, echo=FALSE, fig.align='center'}
+```{r, echo=FALSE, fig.align='center', fig.alt="Plot of estimated causal effect versus median of exposure in quantile."}
 knitr::include_graphics("./img/ivxtile-plot-02.svg")
 ```    
 
@@ -60,7 +60,7 @@ use ../data/ivbinoutdata, clear
 ivxtile, nq(5) par(b1): ivtsps y (x = z1 z2 z3), link(logadd)
 qui gr export ./img/ivxtile-plot-03.svg, replace
 ```
-```{r, echo=FALSE, fig.align='center'}
+```{r, echo=FALSE, fig.align='center', fig.alt="Plot of estimated causal effect versus median of exposure in quantile."}
 knitr::include_graphics("./img/ivxtile-plot-03.svg")
 ```
 ```{stata, eval=FALSE}
