--- a/site/ivtsps-examples.Rmd
+++ b/site/ivtsps-examples.Rmd
@@ -49,5 +49,5 @@ ivtsps y (x = z1 z2 z3), link(logit)
 
 Bootstrap standard errors.
 ```{stata}
-bootstrap, reps(250): ivtsps y (x = z1 z2 z3), estonly
+bootstrap, reps(250) nodots: ivtsps y (x = z1 z2 z3), estonly
 ```
